# ai-devsecops

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/ai_image_scanner/: __init__.py  agent.py
