[project]
name = "ai-image-scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "smodoubeopenit",email = "smodou.diouf@beopenit.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ai_image_scanner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
